Update instructions for v0.1.1 and WordPress 6.8.2

--- a/charts/boost/templates/rbac/role.yaml
+++ b/charts/boost/templates/rbac/role.yaml
@@ -169,4 +169,14 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - rbac.authorization.k8s.io
+  resources:
+  - rolebindings
+  verbs:
+  - create
+  - get
+  - list
+  - patch
+  - update
 {{- end -}}
